@@ -31,7 +31,7 @@ import org.openjdk.jmh.annotations.*;
 @State(Scope.Thread)
 @Warmup(iterations = 5, time = 1)
 @Measurement(iterations = 5, time = 1)
-@Fork(3)
+@Fork(value = 3, jvmArgsAppend = {"--add-opens", "java.base/jdk.internal.value=ALL-UNNAMED", "--enable-preview"})
 public class HoistArrayChecks {
     private static final int SIZE = 1_000_000;
 
